<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical" >

    <TableRow
        android:layout_margin="20dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/sms_alarm_set1"
            style="@style/style_grid_item"
            android:text="@string/sms_alarm_set1" />

        <TextView
            android:id="@+id/sms_alarm_exist_set"
            style="@style/style_grid_item"
            android:text="@string/sms_alarm_exist_set" />
    </TableRow>

    <TableRow
        android:layout_margin="20dp"
        android:gravity="center_horizontal" >

        <TextView
            android:id="@+id/sms_alarm_contact"
            style="@style/style_grid_item"
            android:text="@string/sms_alarm_contact" />

        <TextView
            android:id="@+id/sms_alarm_yet_send"
            style="@style/style_grid_item"
            android:text="@string/sms_alarm_yet_send" />
    </TableRow>

</TableLayout>