<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/app_menu_dialog_id"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/app_set_server"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/app_server_ip" />

        <EditText
            android:id="@+id/app_menu_dialog_setting_ip"
            style="@style/style_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/app_port" />

        <EditText
            android:id="@+id/app_menu_dialog_setting_port"
            style="@style/style_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/app_menu_dialog_setting_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/app_sure" />

        <Button
            android:id="@+id/app_menu_dialog_setting_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_bg"
            android:text="@string/app_exit" />
    </LinearLayout>

</LinearLayout>