<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="100dp" 
	android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		>
        <Button
            android:id="@+id/dialog_sms_clock_search_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="15dp"
            android:text="@string/app_delete" />

        <Button
            android:id="@+id/dialog_sms_clock_search_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="@string/app_edit" 
            />
    </RelativeLayout>

    <Button
        android:id="@+id/dialog_sms_clock_search_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/app_exit" />

</LinearLayout>