<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:focusable="true"
	android:focusableInTouchMode="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
       
		<TextView android:id="@+id/sms_alarm_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:visibility="gone"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/textview_telphone" 
                android:gravity="right"
                />

            <EditText
                android:id="@+id/sms_alarm_telphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" 
                android:singleLine="true"
                android:maxLength="15"
				style="@style/style_edittext"
                >
            </EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/textview_telname" 
                android:gravity="right"
                />

            <EditText
                android:id="@+id/sms_alarm_telname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLength="15"
				style="@style/style_edittext"
                >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             >

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/textview_sms_content" 
                android:gravity="right"
                />

            <EditText
                android:id="@+id/sms_alarm_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/style_edittext"
                />
        </LinearLayout>

        <DatePicker
            android:id="@+id/sms_alarm_datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            />

        <TimePicker
            android:id="@+id/sms_alarm_timePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sms_alarm_set_sms_clock"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/app_button_submit"
            android:text="@string/textview_sms_submit" 
            style="@style/style_app_button"
            />
    </LinearLayout>

</ScrollView>