<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#E6EFFA"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/sms_alarm_search_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/textview_telphone"
            android:textColor="#443F3F" />

        <TextView
            android:id="@+id/sms_alarm_search_telphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#443F3F" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/textview_telname"
            android:textColor="#443F3F" />

        <TextView
            android:id="@+id/sms_alarm_search_telname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#443F3F" />
    </LinearLayout>

    <TextView
        android:id="@+id/sms_alarm_search_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/sms_talk_left"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/textview_sms_sendtime"
            android:textColor="#443F3F" />

        <TextView
            android:id="@+id/sms_alarm_search_sendtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textColor="#443F3F" />
    </LinearLayout>

    <TextView
        android:id="@+id/sms_alarm_search_showtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:textColor="#009900" />

</LinearLayout>